--- a/tarea 4/tarea4.tex
+++ b/tarea 4/tarea4.tex
@@ -43,7 +43,7 @@
 \tableofcontents
 \newpage
 \section{Algoritmo \dij}
-Para el algoritmo de \dij hay dos archivos en el cual podemos resolver un grafo, ya sea directo o sin dirección. El primero con el nombre de shortest\_path2.py se utiliza una función con el nombre \dij, el cual toma el grafo en términos de diccionario, el nodo de inicio, el nodo destino, las etiquedas debidamente inicializadas en $\infty$ y la dimensión de este mismo grafo definido.
+Para el algoritmo de \dij hay dos archivos en el cual podemos resolver un grafo, ya sea directo o sin dirección. El primero con el nombre de shortest\_path2.py se utiliza una función con el nombre \dij, el cual toma el grafo en términos de diccionario, el nodo de inicio, el nodo destino, las etiquetas debidamente inicializadas en $\infty$ y la dimensión de este mismo grafo definido.
 
 En el mismo código se da la opción de escoger entre tres grafos de los cuales ningún costo es negativo, puesto que \dij solo trabaja con costos positivos.
 
@@ -55,7 +55,7 @@ En el primer ejemplo tenemos el siguiente grafo:
     \caption{6 nodos, inicio = a, final = f}
 \end{figure}
 
-Como se muestra en la figura 1,tenemos un grafo de 6 nodos, comenzamos en el nodo a y terminaremos en el nodo f, después de aplicar el algoritmo \dij encontramos como solución:
+Como se muestra en la figura 1, tenemos un grafo de 6 nodos, comenzamos en el nodo a y terminaremos en el nodo f, después de aplicar el algoritmo \dij encontramos como solución:
 \begin{center}
     Distancia más corta:
     10,
@@ -72,7 +72,7 @@ Para el ejemplo 2 tenemos el siguiente grafo:
     \caption{7 nodos, inicio = a, final = g}
 \end{figure}
 
-Como vemos en el título de la  figura 2,tenemos un grafo de 7 nodos, comenzamos en el nodo a y terminaremos en el nodo g, después de aplicar el algoritmo  \dij nos encontramos con la solución:
+Como vemos en el título de la  figura 2, tenemos un grafo de 7 nodos, comenzamos en el nodo a y terminaremos en el nodo g, después de aplicar el algoritmo  \dij nos encontramos con la solución:
 \begin{center}
     Distancia más corta:
     13,
@@ -160,14 +160,14 @@ Al ejecutar el código tenemos:
 \end{center}
 
 \section{Repositorio}
-Todo el código que se utilizo, notas y resultados lo podemos encontrar en \href{https://github.com/arnoldae9/redes.git}{git hub redes}, el cual es un repositorio personal.
+Todo el código que se utilizó, notas y resultados lo podemos encontrar en \href{https://github.com/arnoldae9/redes.git}{git hub redes}, el cual es un repositorio personal.
 
 \section{Networkx}
 Como nota extra se utilizó la biblioteca \href{https://networkx.org/}{Networkx}.
 
-En el archivo shortest\_path\_networkx que podemos encontrar en el mismo repositorio antes mencionado, podemos ver el código utilizado para generar las imágenes utilizadas en este reporte, asi como la implementación de unos ejemplos con el algoritmo de \dij y \bell porpios de la biblioteca Networkx respectivamente.
+En el archivo shortest\_path\_networkx que podemos encontrar en el mismo repositorio antes mencionado, podemos ver el código utilizado para generar las imágenes utilizadas en este reporte, asi como la implementación de unos ejemplos con el algoritmo de \dij y \bell propios de la biblioteca Networkx respectivamente.
 \section{Resultados}
-Se utilizaron 3 grafos para el algoritmo de \dij de los cuales ninguno fallo, en el algoritmo de \bell se utilizaron 4 grafos (2 no dirigidos y 2 dirigidos) de los cuales tampoco falló ninguno.
+Se utilizaron 3 grafos para el algoritmo de \dij de los cuales ninguno falló, en el algoritmo de \bell se utilizaron 4 grafos (2 no dirigidos y 2 dirigidos) de los cuales tampoco falló ninguno.
 
 Se utilizaron los siguientes libros:
 \cite{chun2001core}
