--- a/tarea 5/reporte-tarea5.tex
+++ b/tarea 5/reporte-tarea5.tex
@@ -113,7 +113,9 @@ El camino es de:
 0 5 
   \end{minipage}
 
+\section*{Resultados}
 
+Los archivos del código y los resultados mostrados se pueden consultar en la siguiente dirección: \href{}{}
 
 
 
