--- a/tarea 5/reporte-tarea5.tex
+++ b/tarea 5/reporte-tarea5.tex
@@ -38,9 +38,14 @@
 %-----------------------------------------------------------------------------------------------------------------
 \newcommand{\war}{ \textit{{\bfseries{Floyd Warshall}}} }
 
-\begin{document}
 
-\section*{Algoritmo \war}
+
+\begin{document}
+\begin{center}
+  {  \bfseries \LARGE Optimización en Redes} \\
+{ \bfseries \Large Lic. Arnoldo Del Toro Peña }
+\end{center}
+\section*{Algoritmo \war} 
 
 El código se baso en algoritmo \war enunciado en clase, se utilizaron diccionarios para representar los arcos, para después recopilar una matriz de estos mismos.
 
@@ -57,7 +62,7 @@ Por último al momento de ejecutarlo nos pide los nodos de inicio y final para r
 Los grafos utilizados fueron los sguientes:
 
 \begin{figure}[h!]
-  \begin{minipage}[b]{0.4\linewidth}
+  \begin{minipage}[b]{0.5\linewidth}
   \centering
   \includegraphics[width=\linewidth]{ejemplo1.eps}
   \caption{Grafo 1}
@@ -115,7 +120,9 @@ El camino es de:
 
 \section*{Resultados}
 
-Los archivos del código y los resultados mostrados se pueden consultar en la siguiente dirección: \href{}{}
+Los archivos del código y los resultados mostrados se pueden consultar en la siguiente dirección: \href{https://github.com/arnoldae9/redes.git}{Git Hub}, el repositorio esta público y para ejecutarlo se necesitan las librerías que vienen ahi descritas.
+
+En los resultados, al menos en estos tres problemas si encontraron la respuesta correcta.
 
 
 
