--- a/tarea 5/reporte-tarea5.tex
+++ b/tarea 5/reporte-tarea5.tex
@@ -47,7 +47,7 @@
 \end{center}
 \section*{Algoritmo \war} 
 
-El código se baso en algoritmo \war enunciado en clase, se utilizaron diccionarios para representar los arcos, para después recopilar una matriz de estos mismos.
+El código se basó en algoritmo \war enunciado en clase, se utilizaron diccionarios para representar los arcos, para después recopilar una matriz de estos mismos.
 
 Se tomaron 3 ejemplos para correr el código. El código permite leer los valores de la matriz de adyacencia a través de un archivo .txt, de igual manera se pueden insertar de manera manual en los archivos .txt.
 
@@ -62,13 +62,14 @@ Por último al momento de ejecutarlo nos pide los nodos de inicio y final para r
 Los grafos utilizados fueron los sguientes:
 
 \begin{figure}[h!]
-  \begin{minipage}[b]{0.5\linewidth}
+  \centering
+  \begin{minipage}[b]{0.4\linewidth}
   \centering
   \includegraphics[width=\linewidth]{ejemplo1.eps}
   \caption{Grafo 1}
   \end{minipage}
   \hspace{0.5cm}
-  \begin{minipage}[b]{0.5\linewidth}
+  \begin{minipage}[b]{0.4\linewidth}
   \centering
   \includegraphics[width=\linewidth]{ejemplo2.eps}
   \caption{Grafo 2}
@@ -77,7 +78,7 @@ Los grafos utilizados fueron los sguientes:
 
 \begin{figure}[h!]
 \centering
-\includegraphics[scale = 0.5]{ejemplo3.eps}
+\includegraphics[scale = 0.4]{ejemplo3.eps}
 \caption{Grafo 3}
 \end{figure}
 
@@ -120,9 +121,9 @@ El camino es de:
 
 \section*{Resultados}
 
-Los archivos del código y los resultados mostrados se pueden consultar en la siguiente dirección: \href{https://github.com/arnoldae9/redes.git}{Git Hub}, el repositorio esta público y para ejecutarlo se necesitan las librerías que vienen ahi descritas.
+Los archivos del código y los resultados mostrados se pueden consultar en la siguiente dirección: \href{https://github.com/arnoldae9/redes.git}{Git Hub}, el repositorio está público y para ejecutarlo se necesitan las librerías que vienen ahí descritas.
 
-En los resultados, al menos en estos tres problemas si encontraron la respuesta correcta.
+En los resultados, al menos en estos tres problemas sí encontraron la respuesta correcta.
 
 
 
