--- a/tarea 7/pruebadelexctura.ipynb
+++ b/tarea 7/pruebadelexctura.ipynb
@@ -2,14 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "1 2 3\n",
+      "1 3 1\n",
+      "2 1 3\n",
+      "2 4 1\n",
+      "2 7 5\n",
+      "3 1 1\n",
+      "3 4 2\n",
+      "3 6 5\n",
+      "4 2 1\n",
+      "4 3 2\n",
+      "4 5 4\n",
+      "4 6 2\n",
+      "5 4 4\n",
+      "5 7 2\n",
+      "5 8 1\n",
+      "6 3 5\n",
+      "6 4 2\n",
+      "6 8 3\n",
+      "7 2 5\n",
+      "7 5 2\n",
+      "8 5 1\n",
+      "8 6 3\n"
      ]
     }
    ],
@@ -20,21 +41,29 @@
     "MAXN = 220\n",
     "cap=[[0]*MAXN for _ in range(MAXN)]\n",
     "renglon = []\n",
-    "with open('prueba1.txt','r') as ejemplo1:\n",
+    "with open('Dijkstra.txt','r') as ejemplo1:\n",
     "    for linea in ejemplo1:\n",
     "        renglon.append(linea.split( ))\n",
     "\n",
     "for item in renglon:\n",
     "    for subitem in range(len(item)):\n",
     "        item[subitem] = int(item[subitem])\n",
-    "for item in range(len(renglon)):\n",
-    "    cap[renglon[item][0]][renglon[item][1]] = renglon[item][2]\n",
-    "    i = renglon[item][0]\n",
-    "    j = renglon[item][1]\n",
-    "    capacidad = renglon[item][2]\n",
-    "    G.add_edge(i,j,capacity = capacidad)\n",
-    "flow_max = nx.maximum_flow_value(G,1,7)\n",
-    "print(flow_max)\n"
+    "with open('prueba7.txt','a') as prueba:\n",
+    "    for i in range(len(renglon[0])):\n",
+    "        for j in range (len(renglon[0])):\n",
+    "            if renglon[i][j] !=0:\n",
+    "                print(i+1,j+1,renglon[i][j])\n",
+    "                outnode = int(i+1)\n",
+    "                innode = int(j+1)\n",
+    "                prueba.write(str(outnode))\n",
+    "                prueba.write(\" \")\n",
+    "                prueba.write(str(innode))\n",
+    "                prueba.write(\" \")\n",
+    "                prueba.write(str(renglon[i][j]))\n",
+    "                prueba.write(\"\\n\")\n",
+    "    prueba.close()\n",
+    "\n",
+    "\n"
    ]
   },
   {
